agp - it\'s simpy. char in option structure. fix error without arguments

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all clean
 
 PROGNAME = example
-SOURCES = example.c ../argparse.c
+SOURCES = example.c ../agp.c
 INCLUDEDIR = ".."
 
 CC = gcc
